--- a/packages/create-velox/templates/vanilla-ts/src/style.css
+++ b/packages/create-velox/templates/vanilla-ts/src/style.css
@@ -16,16 +16,29 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
+  text-align: center;
 }
 
 #app {
+  width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .card {
